--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         <div class="mt-6 flex items-center justify-between">
           <button id="btnPrev" class="rounded-xl px-4 py-2 border border-slate-300 font-semibold disabled:opacity-40" disabled>Voltar</button>
-       <!--    <button id="btnNext" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Próxima</button>-->
+          <button id="btnNext" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Próxima</button>
         </div>
       </div>
     </div>
