--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
         <div class="mt-6 p-5 rounded-2xl bg-emerald-50 border border-emerald-200">
           <h3 class="font-bold">Receba seu plano personalizado no WhatsApp</h3>
-          <p class="text-slate-700 mt-1">Preencha seu nome e número. Após o pagamento de <strong>R$ 9,90</strong>, enviamos o plano completo.</p>
+          <p class="text-slate-700 mt-1">Preencha seu nome e número. Você terá opção de liberar uma dieta <strong>COMPLETA!</strong>e exclusiva para seu corpo!</p>
           <form id="leadForm" class="mt-3 grid md:grid-cols-3 gap-3" onsubmit="return handleLead(event)">
             <input id="nome" type="text" required placeholder="Seu nome" class="rounded-xl border-slate-300" />
             <input id="whats" type="tel" inputmode="tel" required placeholder="(61) 9 9999-9999" class="rounded-xl border-slate-300" />
