--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
     <div class="container mx-auto px-4 py-12 grid lg:grid-cols-2 gap-10 items-center">
       <div>
         <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">🧠 Descubra qual dieta realmente funciona pro seu tipo de corpo <span class="whitespace-nowrap">(em 1 minuto!)</span></h1>
-        <p class="mt-4 text-lg text-slate-600">Responda 15 perguntas rápidas e receba um plano de dieta recomendado para o seu perfil — com dicas e a opção de receber tudo no WhatsApp. Para destravar o plano completo, há uma taxa simbólica de <strong>R$ 9,90</strong>.</p>
+        <p class="mt-4 text-lg text-slate-600">Responda 15 perguntas rápidas e receba um plano de dieta recomendado para o seu perfil — com dicas e a opção de receber tudo no WhatsApp. Para destravar o plano completo, há apenas uma contribuição simbólica para continuidade de nosso projeto!<strong></strong>.</p>
         <div class="mt-6 flex gap-3">
           <a href="#quiz" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Começar agora</a>
           <a href="#como-funciona" class="rounded-xl px-6 py-3 border border-slate-300 font-semibold hover:bg-white transition">Como funciona</a>
         </div>
-        <p class="mt-3 text-sm text-slate-500">⚠️ Conteúdo informativo. Para condições de saúde, procure um profissional.</p>
+        <p class="mt-3 text-sm text-slate-500">⚠️ Este Conteúdo é informativo</p>
       </div>
       <div class="relative">
         <div class="rounded-2xl overflow-hidden shadow-soft border border-slate-200 bg-white">
@@ -102,7 +102,7 @@
         <div class="p-6 rounded-2xl border border-slate-200 bg-white shadow-soft">
           <p class="text-sm text-slate-500">3 de 3</p>
           <h3 class="font-bold mt-1">Destrave o plano completo</h3>
-          <p class="mt-2 text-slate-600">Por R$ 9,90 você recebe o plano detalhado no WhatsApp e e-mail.</p>
+          <p class="mt-2 text-slate-600">Por uma contribuião simbolica você recebe o plano COMPLETO e detalhado no WhatsApp e e-mail.</p>
         </div>
       </div>
     </div>
