--- a/index.html
+++ b/index.html
@@ -20,24 +20,36 @@
     fieldset.step legend { font-size: 1.25rem; font-weight: 700; }
     .hidden { display: none !important; }
 
-    /* === Estilo VERDE moderno para os boxes das perguntas === */
+    /* ===== Fundo degradê moderno do BOX de perguntas ===== */
+    fieldset.step {
+      background: linear-gradient(135deg, #d1fae5, #a7f3d0); /* verde clarinho */
+      border-radius: 20px;
+      padding: 20px;
+      border: 1px solid #6ee7b7;
+      box-shadow: 0 8px 24px rgba(16, 185, 129, 0.20);
+      transition: transform .2s ease, box-shadow .2s ease;
+    }
+    fieldset.step:hover {
+      transform: scale(1.01);
+      box-shadow: 0 10px 28px rgba(5, 150, 105, 0.25);
+    }
+
+    /* ===== Opções (respostas) em branco ===== */
     .choice label {
-      background: linear-gradient(135deg, #a7f3d0, #6ee7b7); /* verde claro -> turquesa */
-      border: 2px solid #10b981;   /* emerald-500 */
-      color: #064e3b;               /* green-900 */
-      transition: transform .18s ease, box-shadow .18s ease, background .18s ease;
-      box-shadow: 0 6px 18px rgba(16,185,129,0.18);
+      background: #ffffff;             /* branco limpo */
+      border: 1.5px solid #e5e7eb;     /* slate-200/300 */
+      color: #0f172a;                  /* slate-900 */
+      transition: transform .16s ease, box-shadow .16s ease, border-color .16s ease;
+      box-shadow: 0 4px 14px rgba(2, 6, 23, 0.06);
     }
     .choice label:hover {
-      transform: translateY(-1px) scale(1.02);
-      background: linear-gradient(135deg, #6ee7b7, #34d399); /* turquesa -> emerald-400 */
-      box-shadow: 0 10px 22px rgba(16,185,129,0.25);
+      transform: translateY(-1px);
+      box-shadow: 0 8px 18px rgba(2, 6, 23, 0.10);
+      border-color: #cbd5e1; /* slate-300 */
     }
     .choice input:checked + label {
-      background: linear-gradient(135deg, #34d399, #059669); /* emerald-400 -> emerald-600 */
-      color: #ffffff;
-      border-color: #047857; /* emerald-700 */
-      box-shadow: 0 10px 24px rgba(5,150,105,0.35);
+      border-color: #10b981;           /* emerald-500 */
+      box-shadow: 0 10px 24px rgba(16, 185, 129, 0.25);
     }
   </style>
 </head>
@@ -65,12 +77,12 @@
     <div class="container mx-auto px-4 py-12 grid lg:grid-cols-2 gap-10 items-center">
       <div>
         <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">🧠 Descubra qual dieta realmente funciona pro seu tipo de corpo <span class="whitespace-nowrap">(em 1 minuto!)</span></h1>
-        <p class="mt-4 text-lg text-slate-600">Responda 15 perguntas rápidas e receba um plano de dieta recomendado para o seu perfil — com dicas e a opção de receber tudo no WhatsApp. Para destravar o plano completo, há apenas uma contribuição simbólica para continuidade de nosso projeto!<strong></strong>.</p>
+        <p class="mt-4 text-lg text-slate-600">Responda 15 perguntas rápidas e receba um plano de dieta recomendado para o seu perfil — com dicas e a opção de receber tudo no WhatsApp. Para destravar o plano completo, há uma taxa simbólica de <strong>R$ 9,90</strong>.</p>
         <div class="mt-6 flex gap-3">
           <a href="#quiz" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Começar agora</a>
           <a href="#como-funciona" class="rounded-xl px-6 py-3 border border-slate-300 font-semibold hover:bg-white transition">Como funciona</a>
         </div>
-        <p class="mt-3 text-sm text-slate-500">⚠️ Este Conteúdo é informativo</p>
+        <p class="mt-3 text-sm text-slate-500">⚠️ Conteúdo informativo. Para condições de saúde, procure um profissional.</p>
       </div>
       <div class="relative">
         <div class="rounded-2xl overflow-hidden shadow-soft border border-slate-200 bg-white">
@@ -102,7 +114,7 @@
         <div class="p-6 rounded-2xl border border-slate-200 bg-white shadow-soft">
           <p class="text-sm text-slate-500">3 de 3</p>
           <h3 class="font-bold mt-1">Destrave o plano completo</h3>
-          <p class="mt-2 text-slate-600">Por uma contribuião simbolica você recebe o plano COMPLETO e detalhado no WhatsApp e e-mail.</p>
+          <p class="mt-2 text-slate-600">Por R$ 9,90 você recebe o plano detalhado no WhatsApp e e-mail.</p>
         </div>
       </div>
     </div>
@@ -154,7 +166,7 @@
 
         <div class="mt-6 p-5 rounded-2xl bg-emerald-50 border border-emerald-200">
           <h3 class="font-bold">Receba seu plano personalizado no WhatsApp</h3>
-          <p class="text-slate-700 mt-1">Preencha seu nome e número. Você terá opção de liberar uma dieta <strong>COMPLETA!</strong>e exclusiva para seu corpo!</p>
+          <p class="text-slate-700 mt-1">Preencha seu nome e número. Após o pagamento de <strong>R$ 9,90</strong>, enviamos o plano completo.</p>
           <form id="leadForm" class="mt-3 grid md:grid-cols-3 gap-3" onsubmit="return handleLead(event)">
             <input id="nome" type="text" required placeholder="Seu nome" class="rounded-xl border-slate-300" />
             <input id="whats" type="tel" inputmode="tel" required placeholder="(61) 9 9999-9999" class="rounded-xl border-slate-300" />
@@ -240,7 +252,7 @@
             var id = "q"+i+"_"+letter;
             html += '<div class="choice">';
             html += '<input class="peer hidden" type="radio" id="'+id+'" name="q'+i+'" value="'+letter+'" required />';
-            html += '<label for="'+id+'" class="block rounded-xl p-3 border">'+ item.a[j] +'</label>';
+            html += '<label for="'+id+'" class="block rounded-xl p-3">'+ item.a[j] +'</label>';
             html += '</div>';
           }
           html += '</div></fieldset>';
