--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <p class="mt-4 text-lg text-slate-600">Responda 15 perguntas rápidas e receba um plano de dieta recomendado para o seu perfil — com dicas e a opção de receber tudo no WhatsApp. Para destravar o plano completo, há uma taxa simbólica de <strong>R$ 9,90</strong>.</p>
         <div class="mt-6 flex gap-3">
           <a href="#quiz" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Começar agora</a>
-          <a href="#como-funciona" class="rounded-xl px-6 py-3 border border-slate-300 font-semibold hover:bg-white transition">Como funciona</a>
+          <a href="#como-funciona" class="rounded-2xl px-6 py-3 border border-slate-300 font-semibold hover:bg-white transition">Como funciona</a>
         </div>
         <p class="mt-3 text-sm text-slate-500">⚠️ Conteúdo informativo. Para condições de saúde, procure um profissional.</p>
       </div>
@@ -138,7 +138,7 @@
     <div class="container mx-auto px-4">
       <div class="p-6 rounded-2xl bg-white border border-slate-200 shadow-soft">
 
-        <!-- ===== (1) BANNER DE STATUS (NOVO) ===== -->
+        <!-- Banner de status -->
         <div id="statusBanner" class="hidden mb-4 rounded-xl px-4 py-3 text-sm border"></div>
 
         <div class="flex items-center justify-between mb-4">
@@ -214,12 +214,12 @@
 
   <script>
   (function(){
-    // CONFIG
+    // ====== CONFIG ======
     var WHATS_NUMBER = "55619998514680";
     var MP_PUBLIC_KEY = "APP_USR-87cc4830-2ac4-410d-82b8-f295612a75b0";
     var MP_ENDPOINT = "https://dietapronta.online/api/mp-preference";
 
-    // Perfis
+    // ====== PERFIS ======
     var PROFILES = {
       A: { title: "🥑 Perfil A — Low Carb / Cetogênica", desc: "Seu corpo tende a responder melhor a baixos carboidratos, priorizando proteínas magras e gorduras boas. Controle açúcar e farinhas refinadas.", tips: ["Priorize ovos, peixes, carnes magras, abacate e azeite","Troque refrigerantes por água com limão","Monitore sódio e ingestão de fibras"], menu: ["Café: omelete com queijo + abacate","Almoço: frango grelhado + salada com azeite","Jantar: salmão + legumes salteados"] },
       B: { title: "🍚 Perfil B — Balanceada / Mediterrânea", desc: "Seu metabolismo pede equilíbrio entre carboidratos complexos, proteínas e gorduras boas. Foco em alimentos naturais e variedade.", tips: ["Monte pratos coloridos e variados","Prefira grãos integrais e frutas","Inclua azeite e oleaginosas com moderação"], menu: ["Café: iogurte + granola + frutas","Almoço: arroz integral, feijão, filé de peixe e salada","Jantar: sopa de legumes + frango desfiado"] },
@@ -227,7 +227,7 @@
       D: { title: "🕒 Perfil D — Jejum Intermitente / Flexível", desc: "Você lida bem com janelas de alimentação. Foque em refeições completas e evite exageros nas quebras do jejum.", tips: ["Defina janela (ex.: 16/8) com profissional, se possível","Priorize proteínas e fibras na primeira refeição","Beba água, café sem açúcar e chás no jejum"], menu: ["Primeira refeição: bowl proteico (iogurte grego + nuts)","Segunda: frango + legumes + arroz integral","Terceira (opcional): sopa de legumes + ovos"] }
     };
 
-    // Perguntas
+    // ====== PERGUNTAS ======
     var QUESTIONS = [
       { q: "Qual seu principal objetivo agora?", a: ["Emagrecer rápido","Ganhar massa magra","Manter peso e saúde","Reduzir gordura localizada"] },
       { q: "Seu nível de energia diário é…", a: ["Sempre cansado","Oscila muito","Constante","Muito alto"] },
@@ -246,7 +246,7 @@
       { q: "Qual frase te representa?", a: ["Quero resultados rápidos","Prefiro algo sustentável","Quero comer bem e perder peso","Quero performance máxima"] }
     ];
 
-    // Estado
+    // ====== ESTADO ======
     var selected = new Array(QUESTIONS.length); for(var si=0; si<selected.length; si++){ selected[si] = null; }
     var scores = { A:0, B:0, C:0, D:0 };
     var current = 0;
@@ -254,7 +254,7 @@
     function $(id){ return document.getElementById(id); }
     var form = $("quizForm");
 
-    // Render perguntas
+    // ====== RENDER ======
     function renderQuestions(){
       try {
         var html = "";
@@ -331,7 +331,13 @@
     // Voltar
     $("btnPrev").addEventListener("click", function(e){ e.preventDefault(); prevStep(); });
 
-    // Lead + Pagamento
+    // ====== PAGAMENTO ======
+
+    // Gerador simples de external_reference
+    function uuidRef(){
+      return 'ref-' + Date.now() + '-' + Math.random().toString(36).slice(2,8);
+    }
+
     function handleLead(e){
       e.preventDefault();
       $("leadOk").classList.remove("hidden");
@@ -348,13 +354,18 @@
 
       var mp = new MercadoPago(MP_PUBLIC_KEY, { locale: "pt-BR" });
 
-      // Timeout de segurança
+      // 1) Criar external_reference único e salvar
+      var ref = uuidRef();
+      try { localStorage.setItem('mp_external_ref', ref); } catch(e){}
+
+      // 2) Timeout de segurança
       var timeout = new Promise(function(_, rej){ setTimeout(function(){ rej(new Error('Timeout criando preferência')); }, 12000); });
 
+      // 3) Enviar ref ao backend
       var req = fetch(MP_ENDPOINT, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ valor: 9.90, titulo: "Plano de Dieta Completo" })
+        body: JSON.stringify({ valor: 9.90, titulo: "Plano de Dieta Completo", external_reference: ref })
       })
       .then(function(r){ return r.text().then(function(txt){ var data={}; try{data=JSON.parse(txt);}catch{} if(!r.ok) throw new Error("HTTP "+r.status+" "+txt); if(!data.id) throw new Error("Preferência sem id: "+txt); return data; }); });
 
@@ -386,7 +397,7 @@
       window.open(link, "_blank");
     }
 
-    /* ===== (2) NOVA DETECÇÃO DE STATUS + BOTÃO “VERIFICAR” ===== */
+    // ====== DETECÇÃO DE STATUS (approved/pending/failure) + POLLING ======
     (function detectarStatus(){
       var p = new URLSearchParams(location.search);
       var status = p.get("status");
@@ -401,34 +412,58 @@
       if(status === "approved"){
         if (window.fecharPopup) window.fecharPopup();
         setTimeout(abrirWhatsAppComResultado, 300);
-      } else if(status === "pending"){
-        showBanner(
-          "Pagamento pendente. Se foi Pix, a confirmação costuma sair em alguns minutos. Assim que for aprovado, liberamos seu plano.",
-          "bg-amber-50 border-amber-300 text-amber-800"
-        );
-        // Botão "Já paguei / Verificar pagamento"
-        var btn = document.createElement("button");
-        btn.className = "mt-2 inline-flex items-center gap-2 rounded-xl px-3 py-2 border border-slate-300 text-sm";
-        btn.textContent = "Já paguei / Verificar pagamento";
-        btn.onclick = function(e){ e.preventDefault(); verificarPagamento(); };
-        banner.appendChild(btn);
-      } else if(status === "failure"){
+        return;
+      }
+
+      if(status === "failure"){
         showBanner(
           "Pagamento não aprovado. Você pode tentar novamente com Pix, outro cartão ou outro método.",
           "bg-rose-50 border-rose-300 text-rose-800"
         );
+        return;
+      }
+
+      if(status === "pending"){
+        showBanner(
+          "Pagamento pendente. Se foi Pix, a confirmação costuma sair em alguns minutos. Assim que for aprovado, liberamos seu plano.",
+          "bg-amber-50 border-amber-300 text-amber-800"
+        );
+        // Botão manual
+        var btn = document.createElement("button");
+        btn.className = "mt-2 inline-flex items-center gap-2 rounded-xl px-3 py-2 border border-slate-300 text-sm";
+        btn.textContent = "Já paguei / Verificar pagamento";
+        btn.onclick = function(e){ e.preventDefault(); checarAgora(); };
+        banner.appendChild(btn);
+
+        // Polling leve a cada 12s
+        var timer = setInterval(checarAgora, 12000);
+
+        async function checarAgora(){
+          var ref = null;
+          try { ref = localStorage.getItem('mp_external_ref'); } catch(e) {}
+          if (!ref) return; // ainda não abriu o pagamento nesta sessão
+
+          try {
+            const r = await fetch('/api/mp-check-status?ref=' + encodeURIComponent(ref));
+            const data = await r.json();
+            // console.log('[check-status]', data);
+
+            if (data && data.found && data.status === 'approved') {
+              clearInterval(timer);
+              if (window.fecharPopup) window.fecharPopup();
+              setTimeout(abrirWhatsAppComResultado, 300);
+            }
+          } catch (e) {
+            // silencioso
+          }
+        }
       }
     })();
 
-    // Verificação simples (recarga). Depois podemos substituir por checagem via webhook/endpoint.
-    window.verificarPagamento = function(){
-      location.reload();
-      // ou: fetch('/api/mp-check-status?payment_id=...').then(...)
-    };
-
-    // Init
-    renderQuestions();
+    // ====== INIT ======
     document.getElementById("year").textContent = new Date().getFullYear();
+    renderQuestions();
+
   })();
   </script>
 </body>
